@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(src/main.cpp)
 dnl Every other copy of the package version number gets its value from here
-AM_INIT_AUTOMAKE(rainbrurpg-client, 0.0.0)
+AM_INIT_AUTOMAKE(rainbrurpg-client, 0.0.0-1)
 
 dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
 AM_CONFIG_HEADER(config.h)
