@@ -25,22 +25,81 @@
 
 using namespace Ogre;
 
-GameEngine::GameEngine(void)
+GameEngine::GameEngine(void):
+  mResourcesCfg("resources.cfg")
 {
+
   //  log("Starting Ogre::Root");
   Root* mRoot = new Root();
+  setupResources();
   if (mRoot->showConfigDialog())
     {
       //    log("Creating rendering window");
-      RenderWindow* rw = mRoot->initialise(true, "RPG");
+      mWindow = mRoot->initialise(true, "RPG");
       
       // Create the SceneManager, in this case a generic one
       SceneManager* mSceneMgr = mRoot->createSceneManager(ST_GENERIC, "ExampleSMInstance");
       
+      SceneNode* headNode = mSceneMgr->getRootSceneNode()
+	->createChildSceneNode("HeadNode");
+
+      Ogre::Entity* ogreHead = mSceneMgr->createEntity("Head", "dragon.mesh");
+      headNode->attachObject(ogreHead);
+      
       // Create the camera
       Camera* mCamera = mSceneMgr->createCamera("PlayerCam");
       
-      
+      // Create one viewport, entire window
+      Ogre::Viewport* vp = mWindow->addViewport(mCamera);
+      vp->setBackgroundColour(Ogre::ColourValue(0,0,0));
+
+      // Alter the camera aspect ratio to match the viewport
+      mCamera->setAspectRatio(
+        Ogre::Real(vp->getActualWidth()) / Ogre::Real(vp->getActualHeight()));
+
+
+      // Set ambient light
+      mSceneMgr->setAmbientLight(Ogre::ColourValue(0.5, 0.5, 0.5));
+ 
+      // Create a light
+      Ogre::Light* l = mSceneMgr->createLight("MainLight");
+      l->setPosition(20,80,50);
+
+      mRoot->addFrameListener(this);
       mRoot->startRendering();
+    }
+
+}
+
+bool GameEngine::frameRenderingQueued(const Ogre::FrameEvent& evt)
+{
+    if(mWindow->isClosed())
+        return false;
+
+    return true;
+}
+
+void GameEngine::setupResources(void)
+{
+    // Load resource paths from config file
+    Ogre::ConfigFile cf;
+    cf.load(mResourcesCfg);
+
+    // Go through all sections & settings in the file
+    Ogre::ConfigFile::SectionIterator seci = cf.getSectionIterator();
+
+    Ogre::String secName, typeName, archName;
+    while (seci.hasMoreElements())
+    {
+        secName = seci.peekNextKey();
+        Ogre::ConfigFile::SettingsMultiMap *settings = seci.getNext();
+        Ogre::ConfigFile::SettingsMultiMap::iterator i;
+        for (i = settings->begin(); i != settings->end(); ++i)
+        {
+            typeName = i->first;
+            archName = i->second;
+            Ogre::ResourceGroupManager::getSingleton().addResourceLocation(
+                archName, typeName, secName);
+        }
     }
 }
