@@ -1,4 +1,9 @@
+# This file list must be relative from 
+# $PREFIX/share/RainbruRPG
+#
+# $PREFIX is your presumed installation directory
+
 [General]
-Zip=/usr/local/share/RainbruRPG/media/packs/OgreCore.zip
-Zip=/usr/cross/src/ogre_src_v1-7-3/Samples/Media/packs/SdkTrays.zip
-FileSystem=/usr/cross/src/ogre_src_v1-7-3/Samples/Media/models/
+Zip=../../rainbrurpg/media/packs/OgreCore.zip
+Zip=../../rainbrurpg/media/packs/dragon.zip
+FileSystem=./
